# rust-gppvm

./: Cargo.toml  GRAMMAR.md  README.md  TODO.md  run.ps1
gppvm/: Cargo.toml
gppvm/src/: command.rs  compiler.rs  lib.rs  main.rs
gppvm/tests/: functionalities.rs
gppvm_core/: Cargo.toml
gppvm_core/src/: argument.rs  context.rs  lib.rs  pipeline.rs  stage.rs
gppvm_default_plugins/generator/: Cargo.toml
gppvm_default_plugins/generator/src/: bytecode.rs  bytecode_generator.rs  bytecode_writer.rs  lib.rs
gppvm_default_plugins/lexer/: Cargo.toml
gppvm_default_plugins/parser/: Cargo.toml
gppvm_default_plugins/semantics/: Cargo.toml
gppvm_plugin_loader/: Cargo.toml
gppvm_runtime/: Cargo.toml
gppvm_runtime/src/: bytecode.rs  lib.rs  native_objects.rs  object.rs  vm.rs
gppvm_toolkit/: Cargo.toml
gppvm_toolkit/src/: decompiler.rs
res/: kernel.gpp  main.gpp  person.gpp  print.grc  test.gpp  test.grc  test.py  test.txt
res/stdlib/: io.gpp  math.gpp  prelude.gpp
res/test/: should_fail_with_variable_redeclaration.gpp  should_panic_with_variable_is_out_of_context.gpp  should_print_binary_operation_results.gpp  should_print_division_and_precedence.gpp
shared_components/: Cargo.toml
shared_components/src/: ast.rs  expressions.rs  lib.rs  reporter.rs  statements.rs  token.rs  util.rs
src/: command.rs  compiler.rs  lib.rs  main.rs  runtime.rs  stdlib.rs
src/compiler/: ast.rs  attributes.rs  bytecode_gen.rs  chunk.rs  decompiler.rs  errors.rs  expressions.rs  lexer.rs  (+6 more)
test_scripts/: invalid_character.gpp  kernel.gpp  test.gpp  unerminated_string.gpp
(+28 files in other folders)
