[workspace]
members = [
    "gppvm",
    "gppvm_core",
    "gppvm_default_plugins/generator",
    "gppvm_default_plugins/intermediate",
    "gppvm_default_plugins/lexer",
    "gppvm_default_plugins/parser",
    "gppvm_default_plugins/semantics",
    "gppvm_plugin_loader",
    "gppvm_runtime",
    "gppvm_toolkit",
    "shared_components",
]

resolver = "1"
