[package]
name = "gppvm"
version = "0.1.0"
edition = "2024"

[dependencies]
gppvm_core = { path = "../gppvm_core" }
shared_components = { path = "../shared_components" }
lexer = { path = "../gppvm_default_plugins/lexer" }
parser = { path = "../gppvm_default_plugins/parser" }
semantics = {path = "../gppvm_default_plugins/semantics"}