[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
intermediate = { path = "../intermediate" }
gppvm_core = { path = "../../gppvm_core" }
shared_components = { path = "../../shared_components" }
gppvm_runtime = { path = "../../gppvm_runtime" }
semantics = { path = "../semantics" }
